--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,17 +1,30 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
     <ion-title>Admin</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content class="auth-form">
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
-    <ion-fab-button>
+    <ion-fab-button [routerLink]="['/hand-tracking']">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
   <ion-list lines="none">
-    <ion-item *ngFor="let tms of categories;">
-      <app-card></app-card>
+    <ion-item *ngFor="let mov of movimientos; index as i">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Movimiento - {{i + 1}}</ion-card-title>
+          <ion-card-subtitle>Creado por {{mov.creadoPor}}</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          {{mov.descripcion}}
+        </ion-card-content>     
+        <ion-button fill="clear">Editar</ion-button>
+        <ion-button fill="clear">Eliminar</ion-button>
+      </ion-card>
     </ion-item>
   </ion-list>
 </ion-content>
