--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
 
         <span class="already">ya eres usuario?</span>
 
-        <ion-button [routerLink]="['/login']" expand="block" color="danger">Login</ion-button>
+        <ion-button [routerLink]="['/login']" expand="block" color="danger">Iniciar Session</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
