--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Admin</ion-title>
+    <ion-title>Lista de Movimientos</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content class="auth-form">
