--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -8,30 +8,30 @@
 </ion-header>
 
 <ion-content>
-  <form>
+  <form (ngSubmit)="registrar()" [formGroup]="usuario">
     <ion-item lines="full">
       <ion-label position="floating">Nombre</ion-label>
-      <ion-input type="text" required></ion-input>
+      <ion-input type="text"  formControlName="nombre" required></ion-input>
     </ion-item>
 
     <ion-item lines="full">
       <ion-label position="floating">ID Admin</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input type="text"  formControlName="idAdmin"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
       <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" required></ion-input>
+      <ion-input type="email" formControlName="email" required></ion-input>
     </ion-item>
 
     <ion-item lines="full">
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" required></ion-input>
+      <ion-input type="password" formControlName="password" required></ion-input>
     </ion-item>
 
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="danger" expand="block">registrar</ion-button>
+        <ion-button type="submit" color="danger" expand="block" [disabled]="!usuario.valid">registrar</ion-button>
       </ion-col>
     </ion-row>
   </form>
