--- a/src/app/user/user.page.html
+++ b/src/app/user/user.page.html
@@ -1,13 +1,24 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>User</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Lista de Movimientos</ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">User</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="auth-form">
+  <ion-list lines="none">
+    <ion-item *ngFor="let mov of movimientos; index as i">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>Movimiento - {{i + 1}}</ion-card-title>
+          <ion-card-subtitle>Creado por {{mov.creadoPor}}</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          {{mov.descripcion}}
+        </ion-card-content>     
+        <ion-button fill="clear">Ver movimiento</ion-button>
+      </ion-card>
+    </ion-item>
+  </ion-list>
 </ion-content>
