Erron el html del video del componente hand-tracking

--- a/src/app/hand-tracking/hand-tracking.component.html
+++ b/src/app/hand-tracking/hand-tracking.component.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <div>
-    <video #videoElement style="display: none;"></video>
+    <video #videoElement class="video" autoplay></video>
     <canvas #canvasElement width="640" height="480"></canvas>
   </div>
 </ion-content>
