Fix para utilizar comandos con canvas y mediapip

--- a/src/app/hand-tracking/hand-tracking.component.html
+++ b/src/app/hand-tracking/hand-tracking.component.html
@@ -8,8 +8,8 @@
 </ion-header>
 
 <ion-content>
-  <div>
-    <video #videoElement class="video" autoplay></video>
-    <canvas #canvasElement width="640" height="480"></canvas>
-  </div>
+  <div class="container">
+    <video class="input_video" style="display: none;"></video>
+    <canvas class="output_canvas" width="540" height="380"></canvas>
+  </div> 
 </ion-content>
