Fix para solucionar lo del socket

--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -22,8 +22,8 @@
         <ion-card-content>
           {{mov.descripcion}}
         </ion-card-content>     
-        <ion-button fill="clear">Editar</ion-button>
-        <ion-button fill="clear">Eliminar</ion-button>
+        <!-- <ion-button fill="clear">Editar</ion-button>
+        <ion-button fill="clear">Eliminar</ion-button> -->
       </ion-card>
     </ion-item>
   </ion-list>
